--- a/webpagesGL.css
+++ b/webpagesGL.css
@@ -1,13 +1,15 @@
 /*
- *Name: [First Last]
- *UnityID: [unityID]
- *Date: [Date Completed]
- *Assignment: [Assignment Name]
- *Description: [Assignment Description]
+ *Name: [Wesley Boyce]
+ *UnityID: [wjboyce2]
+ *Date: [09/19/24]
+ *Assignment: [Guided lab 4]
+ *Description: [About me webpage]
  */
  
 p {
-    property: value;
+    font-family: Times;
+    font-size: 16px
+    c
 }
 
 .class {
