--- a/webpagesGL.css
+++ b/webpagesGL.css
@@ -8,14 +8,15 @@
  
 p {
     font-family: Times;
-    font-size: 16px
-    c
+    font-size: 16px;
+    color: #decaff
 }
 
-.class {
-    property: value;
+.table-border {
+    border: 1px solid #decaff;
 }
 
-#id {
-    property:value;
+#photo-resize {
+    max-width: 250px;
+    max-height: 300px;
 }
